--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "wildcards-frontend",
-  "version": "0.1.0",
+  "name": "with-create-react-app",
+  "version": "0.1.60",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@rainbow-me/rainbowkit": "^1.0.8",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "util": "0.12.4",
+    "viem": "~1.3.0",
+    "wagmi": "~1.3.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "npm run start",
+    "start": "PORT=3030 react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!@rainbow-me)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
