--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "antd": "^5.8.3",
+    "axios": "^1.4.0",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^5.15.0",
     "util": "0.12.4",
-    "viem": "~1.3.0",
+    "viem": "^1.8.1",
     "wagmi": "~1.3.9",
     "web-vitals": "^2.1.4"
   },
