--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "util": "0.12.4",
     "viem": "^1.8.1",
     "wagmi": "~1.3.9",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^4.1.1"
   },
   "scripts": {
     "dev": "npm run start",
