--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-select": "^5.7.4",
     "react-social-icons": "^5.15.0",
     "util": "0.12.4",
-    "viem": "^1.8.1",
-    "wagmi": "~1.3.9",
+    "viem": "^1.10.8",
+    "wagmi": "^1.4.1",
     "web-vitals": "^2.1.4",
     "web3": "^4.1.1"
   },
