--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@metamask/detect-provider": "^2.0.0",
     "antd": "^5.8.3",
     "axios": "^1.4.0",
     "ethers": "^5.7.2",
@@ -18,7 +19,7 @@
     "react-social-icons": "^5.15.0",
     "util": "0.12.4",
     "viem": "^1.10.8",
-    "wagmi": "^1.4.1",
+    "wagmi": "^1.3.10",
     "web-vitals": "^2.1.4",
     "web3": "^4.1.1"
   },
